# rolling-tags

./: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  config.py  fly.toml  pyproject.toml  requirements.txt
modules/error/: cog.py  error_handler.py  error_logger.py
modules/help/: help_command.py
modules/role_tag/: cog.py  member.py
rolling_tags/: __main__.py  bot.py  config.py  guild_settings.py  member_tagger.py  role_tagger.py  rolling_tags_client.py  setup_logger.py  slash_commands.py
rolling_tags/modules/help/: cog.py  help_command.py
rolling_tags/modules/role_tag/: cog.py  member.py  role.py
utils/: utils.py
