[tool.poetry]
name = "rolling-tags"
version = "1.0.0"
description = "Add tags to nicknames based on their roles! Rolling Tags Discord Bot will allow you to easily assign tags next to the usernames of members of your server based on what roles they are in."
authors = ["Abraham Murciano <abraham.murciano@mobileye.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rolling_tags" }]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "1.6.0"
python-dotenv = "^0.21.0"
discord-lumberjack = "^1.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"

[tool.poetry.scripts]
rolling-tags = "rolling_tags.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["discord.*"]
ignore_missing_imports = true
