[tool.poetry]
name = "rolling-tags"
version = "2.0.0"
description = "Add tags to nicknames based on their roles! Rolling Tags Discord Bot will allow you to easily assign tags next to the usernames of members of your server based on what roles they are in."
authors = ["Abraham Murciano <abraham.murciano@mobileye.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rolling_tags" }]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2"
python-dotenv = "^1.0"
discord-lumberjack = "^1.1.3"
parse = "^1.19.0"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"

[tool.poetry.scripts]
rolling-tags = "rolling_tags.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["discord.*", "parse"]
ignore_missing_imports = true
